--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --base-font: 'Inter';
+  --headline-font: 'PressStart2P-Regular';
+  --surface: #d3d3d3;
+  --text-main: #000;
+  --outline-clr: #000;
+  --bg-top: #e7e7e7;
+  --bg-bottom: #1a1a1a;
+  --primary-accent: #000;
+  --blend-contrast: #fff;
+  --border-line: #000;
+  --text-outline: #fff;
+  --weight-title: 700;
+  --weight-body: 400;
+  --highlight-red: red;
+}
