--- a/styles/animations.css
+++ b/styles/animations.css
@@ -72,11 +72,19 @@
 }
 
 @keyframes scale {
-  from { scale: 0; }
-  to { scale: 1; }
+  from { 
+    scale: 0; 
+  }
+  to { 
+    scale: 1; 
+  }
 }
 
 @keyframes sparks {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from { 
+    opacity: 0; 
+  }
+  to { 
+    opacity: 1; 
+  }
 }
