--- a/styles/style.css
+++ b/styles/style.css
@@ -10,14 +10,23 @@
   font-variation-settings: 'wght' 400;
   background-attachment: fixed;
   min-inline-size: 320px;
-  background-size: cover;
-  font-family: var(--base-font), sans-serif;
   min-block-size: 100dvb;
+  font-family: var(--base-font), sans-serif;
+  background-size: cover;
   background-image:
-    linear-gradient(180deg, var(--bg-top) 0%, var(--bg-bottom) 100%),
-    repeating-linear-gradient(to right, var(--surface) 0 2px, transparent 2px 4px),
-    repeating-linear-gradient(to bottom, var(--surface) 0 2px, transparent 2px 4px);
+    repeating-linear-gradient(
+      to bottom,
+      var(--surface) 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      to right,
+      var(--surface) 0 2px,
+      transparent 2px 4px
+    ),
+    linear-gradient(180deg, var(--bg-top) 0%, var(--bg-bottom) 100%);
 }
+
 
 .container {
   inset-block-start: 100px;
