--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .root-layout {
-  font-variation-settings: 'wght' 400;
+  font-weight: 400;
   background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -144,7 +144,7 @@
 
 .body-paragraph {
   font-family: var(--base-font), sans-serif;
-  font-variation-settings: 'wght' var(--weight-body);
+  font-weight: var(--weight-body);
   font-weight: var(--weight-body);
   color: var(--primary-accent);
   font-size: 18px;
